--- a/recipes/drunken-noodles.html
+++ b/recipes/drunken-noodles.html
@@ -7,6 +7,61 @@
 </head>
 <body>
     <h1>Drunken Noodles</h1>
+    <img src="../images/drunken-noodles.png" width="683" heigh="1024">
+
+    <h2>Description</h2>
+    <p>
+        Also known as Pad Kee Mao, this is a popular Thai stir fry noodle dish. 
+        Kaitlin and I made this for the first time for a dinner with her parents, 
+        with no previous experience cooking similar dishes or even most of the ingredients on this list. 
+        However, it turned out beautiful and delicious.
+    </p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>8 oz wide rice noodles</li>
+        <li>2 Tbsp sesame/canola oil</li>
+        <li>2 shallots (chopped)</li>
+        <li>2 carrots (thinly sliced)</li>
+        <li>2 large chicken breasts (chopped)</li>
+        <li>3 large cloves garlic (minced)</li>
+        <li>1/2 teaspoon fresh minced ginger</li>
+        <li>1 zucchini (thinly sliced)</li>
+        <li>1 green bell pepper (thinly sliced)</li>
+        <li>2 green onions (chopped)</li>
+        <li>1 roma tomatoes (sliced)</li>
+        <li>1 cup fresh Thai Holy Basil leaves (roughly chopped)</li>
+    </ul>
+    <h3>Sauce</h3>
+    <ul>
+        <li>3 Tbsp oyster sauce</li>
+        <li>1/3 cup low sodium soy sauce</li>
+        <li>2 teaspoons fish sauce</li>
+        <li>2 teaspoons brown sugar</li>
+        <li>2 Tbsp water</li>
+        <li>1 teaspoon Thai red chili paste, more or less to taste</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook noodles according to package instructions.</li>
+        <li>Mix sauce in a small bowl and set aside.</li>
+        <li>
+            Heat 1 tablespoon of oil in wok or large skillet over high heat. 
+            Add shallots and carrot and cook for 2 minutes. 
+            Add another tablespoon of oil to the pan. 
+            Add chicken and season with pepper, cooking until it's cooked through. 
+            Add garlic and ginger and cook for 10 seconds. 
+            Add bell pepper, zucchini, tomato and the whites of the chopped green onion and cook for 2 minutes.
+        </li>
+        <li>
+            Add noodles to the pan and pour the sauce over the noodles. 
+            Toss and cook for a few minutes until warmed through. 
+            Remove from heat and stir in chopped basil.
+        </li>
+        <li>Serve immediately, garnished with remaining green onion and extra chili sauce, sriracha, or crushed red pepper, for added spice.</li>
+    </ol>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
