Change recipe links in index to unordered list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/drunken-noodles.html">Drunken Noodles</a>
+    <ul>
+        <li>
+            <a href="recipes/drunken-noodles.html">Drunken Noodles</a>
+        </li>
+        <li>
+            <a href="recipes/greek-pasta-salad.html">Greek Pasta Salad</a>
+        </li>
+    </ul>    
 </body>
 </html>
