Add description and ingredients to greek pasta salad recipe page

--- a/recipes/greek-pasta-salad.html
+++ b/recipes/greek-pasta-salad.html
@@ -8,7 +8,33 @@
 <body>
     <h1>Greek Pasta Salad</h1>
     <img src="../images/greek-pasta-salad.png" width="1167" height="1750" alt="A closeup of a bowl of greek pasta salad.">
+    
+    <h2>Description</h2>
+    <p>
+        A very easy, refreshing, and cost effective meal.
+        Tastes better the next day, and goes well with a protein choice like Italian sausage.
+        This is one of the first recipes Kait and I made together.
+    </p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Rotini Pasta</li>
+        <li>English Cucumber</li>
+        <li>Diced Bell Pepper</li>
+        <li>Sliced Red Onion</li>
+        <li>Grape Tomatoes</li>
+        <li>Feta Cheese</li>
+        <li>Kalamata Olives</li>
+    </ul>
+    <h3>Greek Dressing</h3>
+    <ul>
+        <li>Olive Oil</li>
+        <li>Red Wine Vinegar</li>
+        <li>Garlic</li>
+        <li>Dried Oregano</li>
+        <li>Lemon Zest and Lemon Juice</li>
+        <li>Salt and Freshly Ground Black Pepper</li>
+    </ul>
 
     <a href="../index.html">Home</a>
 </body>
