Add steps section to greek pasta salad recipe

--- a/recipes/greek-pasta-salad.html
+++ b/recipes/greek-pasta-salad.html
@@ -36,6 +36,13 @@
         <li>Salt and Freshly Ground Black Pepper</li>
     </ul>
 
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook the Pasta: Follow the package instructions and cook the pasta in a large pot of salted water. Drain the pasta and let it cool.</li>
+        <li>Make the Dressing: Whisk all the dressing ingredients together and set aside.</li>
+        <li>Assemble the Salad: Add all the prepared vegetables, feta, olives and cooled pasta to a large serving bowl. Drizzle the vinaigrette over the salad and toss to combine.</li>
+    </ol>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
