Implement tuna mayo rice bowl recipe page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
             <a href="recipes/greek-pasta-salad.html">Greek Pasta Salad</a>
         </li>
+        <li>
+            <a href="recipes/tuna-mayo-rice-bowl.html">Tuna Mayo Rice Bowl</a>
+        </li>
     </ul>    
 </body>
 </html>
