Add image, description, ingredients, and steps to tuna mayo rice bowl recipe

--- a/recipes/tuna-mayo-rice-bowl.html
+++ b/recipes/tuna-mayo-rice-bowl.html
@@ -7,7 +7,31 @@
 </head>
 <body>
     <h1>Tuna Mayo Rice Bowl</h1>
+    <img src="../images/tuna-mayo-rice-bowl.png" alt="A bowl of tuna, mayo, and rice.">
+    
+    <h2>Description</h2>
+    <p>
+        A simple bowl of tuna, mayo, and rice, with modest seasoning. 
+        Although lacking in fiber, this bowl of protein and carbs is incredibly quick to put together making it an easy go-to. 
+        I've eaten this probably more often than I should, but I'm not worried about my mercury levels.
+    </p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1/2 cup (uncooked) white rice</li>
+        <li>1 can of chunk light tuna in water</li>
+        <li>3 Tbsp mayo</li>
+        <li>1 teaspoon roasted sesame oil</li>
+        <li>Furikake seasoning</li>
+        <li>1 pack of nori sheets from Costco</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook 1 cup of white rice and scoop half into a bowl. Open the canned tuna and drain the water before placing atop rice.</li>
+        <li>Add mayo and sesame oil to the bowl, and mix until done. Sprinkle a layer of furikake to finish.</li>
+        <li>Serve warm. Use the nori sheets to scoop from the bowl in bite-sized amounts.</li>
+    </ol>
 
     <a href="../index.html">Home</a>
 </body>
