Change image and add disclaimer for tuna mayo rice bowl recipe

--- a/recipes/tuna-mayo-rice-bowl.html
+++ b/recipes/tuna-mayo-rice-bowl.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Tuna Mayo Rice Bowl</h1>
-    <img src="../images/tuna-mayo-rice-bowl.png" alt="A bowl of tuna, mayo, and rice.">
+    <img src="../images/tuna-mayo-rice-bowl.png" alt="A bowl of tuna, mayo, and rice." width="1800" height="1800">
+    <p>(Actual recipe not pictured)</p>
     
     <h2>Description</h2>
     <p>
